# Arb_Bot

./: Dockerfile  README.md  core.py  main.py  models.py  pyproject.toml  requirements.txt  utils.py
api/: main.py
mock/: exchange.py
tests/: test_api.py  test_utils.py  test_worker.py
worker/: worker.py
